# stylus-hello-world

./: .env.example  .gitignore  Cargo.toml  README.md  Stylus.toml
.cargo/: config
.github/workflows/: check.yml  linux.yml  sbom-export.yaml  wasm.yml
app/: package-lock.json  package.json
app/src/: index.ts
ci/: build.sh  build_and_test.sh
examples/: .env  counter.rs
scripts/: Cargo.toml
scripts/common/: Cargo.toml
scripts/common/src/: lib.rs
scripts/deploy/: Cargo.toml
scripts/deploy/src/: main.rs
scripts/deploy_and_increment/: Cargo.toml  Makefile
scripts/deploy_and_increment/src/: main.rs
scripts/increment/: Cargo.toml
scripts/increment/src/: main.rs
src/: lib.rs  main.rs
