[package]
name = "stylus-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.1.2"
hex = "0.4.3"
wee_alloc = "0.4.5"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] } 
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
